# celestia

./: .travis.yml  CMakeLists.txt  celestia.pro
shaders/: simple.frag  simple.vert  star.frag  star.vert  star_new.frag  star_new.vert
src/: bugs
src/celengine/: axisarrow.cpp  boundaries.cpp  boundaries.h  cmdparser.cpp  fragmentprog.cpp  fragmentprog.h  galaxy.cpp  glcontext.cpp  glcontext.h  globular.cpp  glshader.cpp  glshader.h  lodspheremesh.cpp  marker.cpp  meshmanager.cpp  modelgeometry.cpp  nebula.cpp  observer.cpp  overlay.cpp  parseobject.cpp  particlesystem.cpp  rendcontext.cpp  render.cpp  render.h  renderglsl.cpp  shadermanager.cpp  skygrid.cpp  star.cpp  star.h  staticshaders.cpp  staticshaders.h  stellarclass.cpp  texture.cpp  vertexprog.cpp  vertexprog.h  visibleregion.cpp
src/celestia/: celestiacore.cpp
src/celestia/gtk/: CMakeLists.txt  actions.cpp  common.cpp  common.h  dialog-eclipse.cpp  dialog-goto.cpp  dialog-options.cpp  dialog-solar.cpp  dialog-star.cpp  dialog-time.cpp  dialog-tour.cpp  glwidget.cpp  main.cpp  menu-context.cpp  splash.cpp
src/celestia/qt/: qtappwin.cpp  qtglwidget.cpp  qtpreferencesdialog.cpp
src/celestia/win32/: winbookmarks.cpp  winmain.cpp  winstarbrowser.cpp
src/celmath/: geomutil.h
src/celmodel/: material.h
src/celtxf/: texturefont.cpp
src/celutil/: bytes.h  utf8.cpp
src/tools/: CMakeLists.txt
src/tools/spice2xyzv/: CMakeLists.txt
src/tools/stardb/: HGTPRC.c
